--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csrf-csrf": "^2.2.4",
     "express": "^4.18.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
