--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.6",
     "csrf-csrf": "^2.2.4",
     "express": "^4.18.2",
+    "express-csrf-double-submit-cookie": "^1.2.1",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
